# asv_sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
asv_sim/: README.md  package.xml  setup.cfg  setup.py
asv_sim/asv_sim/: asv_sim_node.py  dynamics.py  environment.py  model.py  platform.py
asv_sim/config/: ben.yaml  bob.yaml  coastal_surveyor.yaml  cw4.yaml  drix.yaml  drix_2.yaml
asv_sim/doc/: asv_sim_node.rst  conf.py
asv_sim/launch/: ben_launch.xml  drix_launch.xml  dual_cw4_launch.xml
asv_sim_interfaces/: CMakeLists.txt  package.xml
asv_sim_interfaces/srv/: SetPose.srv
asv_sim_msgs/: CMakeLists.txt  package.xml
cfg/: asv_sim.cfg  dynamics.cfg  environment.cfg  jitter.cfg
config/: ben.yaml  bob.yaml  coastal_surveyor.yaml  cw4.yaml  drix.yaml  drix_2.yaml
doc/: Makefile  asv_sim.rst  index.rst  modules.rst
launch/: sim.launch  sim_cw4.launch  sim_dual_cw4.launch  sim_joy.launch  sim_key.launch
nodes/: asv_sim  asv_sim_node.py  cw4_sim.py
src/asv_sim/: coastal_surveyor.py  cw4.py  dynamics.py  environment.py  geodesic.py
srv/: SetPose.srv
