<?xml version="1.0"?>
<package format="2">
  <name>asv_sim</name>
  <version>0.0.0</version>
  <description>The asv_sim package</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rosgraph_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
